--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -7,3 +7,5 @@
 <button (click)="increaseBy(1)">+1</button>
 <button (click)="reset()">reset</button>
 <button (click)="decreaseBy(1)">-1</button>
+
+<app-counter></app-counter>
