--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -5,6 +5,6 @@
 
     <app-dbz-list></app-dbz-list>
     
-    <app-add-character></app-add-character>
+    <app-dbz-add-character></app-dbz-add-character>
 
 </div>
